[tool.poetry]
name = "LDNA"
version = "0.1.0"
description = "See readme"
authors = ["Mackelab"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
numpy = "<=1.26"
torch = "*"
torchvision = "*"
tqdm = "*"
pandas = ">=1.3.0"
scikit-learn = "*"
scipy = "<=1.13"
diffusers = "==0.3.0"
nlb_tools = ">=0.0.1"
dysts = "<=0.6"
dandi = ">=0.60.0"
phonemizer = ">=3.0.0"
omegaconf = ">=2.1.0"
opt_einsum = ">=3.3.0"
einops = ">=0.4.0"
lovely-tensors = ">=0.1.0"
torchinfo = "==1.8.0"
wandb = "*"
accelerate = "==1.1.1"

[tool.poetry.dev-dependencies]
jupyter = ">=1.0.0"
pytest = ">=6.0.0"
black = ">=21.0.0"
flake8 = ">=3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
